--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="upload">Upload</string>
     <string name="title_activity_text_viewing">TextViewingActivity</string>
     <string name="save">Save</string>
+    <string name="instruction">Press + to add new image</string>
 </resources>
